[FIX] small cart floating causing product card overlap

--- a/addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
+++ b/addons/care_config_relaunch_v2/static/src/css/care_relaunch_v2.css
@@ -215,6 +215,7 @@ div#products_grid_before {
     width: 100%;
     padding: 30px !important;
     box-shadow: none;
+    float: left !important;
 }
 
 div#products_grid {
